Modules/Lab/network.tf
resource "aws_security_group" "inetsim_sg" {
  name = "${var.defaults.env}-inetsim-sg"
  description = "Allow traffic from flarevm"
  vpc_id = var.vpc.id

  ingress {
    description = "Allow traffic from the VPC"
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.defaults.env}-inetsim-sg"
    Environment = "${var.defaults.env}"
  }
}

resource "aws_security_group" "flare_sg" {
  name        = "${var.defaults.env}-flare-sg"
  description = "Allow RDP and SSH from the Internet"
  vpc_id      = "${var.vpc.id}"

  ingress {
    description = "Allow RDP inbound traffic"
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH inbound traffic"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description     = "Allow outbound traffic to iNetSim"
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = ["${aws_security_group.inetsim_sg.id}"]
  }

  tags = {
    Name = "${var.defaults.env}-flare-sg"
    Environment = "${var.defaults.env}"
  }
}
